Small fixes for the fquota shell commands